--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,18 @@
 steps:
+- name: "gcr.io/cloud-builders/docker"
+  entrypoint: "bash"
+  args: ["-c", "docker login rg.fr-par.scw.cloud/webtor  -u nologin -p $$PASSWORD"]
+  secretEnv: ["PASSWORD"]
 - name: 'gcr.io/cloud-builders/docker'
-  args: ["build", "-t", "gcr.io/$PROJECT_ID/$REPO_NAME:$REVISION_ID", "."]
+  args: ["build", "-t", "rg.fr-par.scw.cloud/webtor/$REPO_NAME:$REVISION_ID", "."]
 - name: gcr.io/cloud-builders/docker
   args: ['tag',
-    'gcr.io/$PROJECT_ID/$REPO_NAME:$REVISION_ID',
-    'gcr.io/$PROJECT_ID/$REPO_NAME:latest']
+    'rg.fr-par.scw.cloud/webtor/$REPO_NAME:$REVISION_ID',
+    'rg.fr-par.scw.cloud/webtor/$REPO_NAME:latest']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ["push", "gcr.io/$PROJECT_ID/$REPO_NAME:$REVISION_ID"]
+  args: ["push", "rg.fr-par.scw.cloud/webtor/$REPO_NAME:$REVISION_ID"]
 - name: 'gcr.io/cloud-builders/docker'
-  args: ["push", "gcr.io/$PROJECT_ID/$REPO_NAME:latest"]
+  args: ["push", "rg.fr-par.scw.cloud/webtor/$REPO_NAME:latest"]
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
   args:
@@ -17,4 +21,8 @@ steps:
     gcloud components install kubectl
     gsutil cp gs://kube-key/kubeconfig .
     export KUBECONFIG=kubeconfig
-    kubectl set image daemonset/torrent-http-proxy --namespace=webtor torrent-http-proxy=gcr.io/$PROJECT_ID/$REPO_NAME:$REVISION_ID || exit 0
+    kubectl set image daemonset/torrent-http-proxy --namespace=webtor torrent-http-proxy=rg.fr-par.scw.cloud/webtor/$REPO_NAME:$REVISION_ID || exit 0
+secrets:
+- kmsKeyName: "projects/vibrant-arcanum-201111/locations/global/keyRings/my/cryptoKeys/my"
+  secretEnv:
+    PASSWORD: "CiQAe+Sl5DqcVdE72XtLyOGHbPjFpflsmSSo2esloNRRfebAWxoSTQCH+tXMtLyGFwQuRCxnfXUnvM8zMHJI72WmrHP1n38bzr5PX/lYsSjv+D6p0/sNA/hegfIs4IKvj9188803DtnLO8RC0dzRJTnXfmzK"
